# weiroll-rs

./: .gitignore  Cargo.toml  Makefile
examples/: example.rs
src/: calls.rs  cmds.rs  error.rs  lib.rs  planner.rs
src/bindings/: command_builder.rs  command_builder_harness.rs  context.rs  erc20.rs  events.rs  executor_token.rs  ierc20.rs  ierc20_metadata.rs  lib_tupler.rs  math.rs  mod.rs  multi_return.rs  payable.rs  revert.rs  sender.rs  state_test.rs  strings.rs  testable_vm.rs  vm.rs
