[package]
name = "weiroll"
version = "0.1.1"
edition = "2024"
description = "Weiroll planner for EVM using ethers-rs"
repository = "https://github.com/georgewhewell/weiroll-rs"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

[lib]

[dependencies]
bitflags = "2"
bytes = "1.11.0"
ethers = "2.0.14"
slotmap = "1.1.1"
thiserror = "2.0.17"
tracing = "0.1.43"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
