[package]
name = "weiroll"
version = "0.2.0"
edition = "2024"
description = "Weiroll planner for EVM using ethers-rs"
repository = "https://github.com/georgewhewell/weiroll-rs"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

[lib]
# TODO: i don't like turning doctests off, but the bindings are all throwing errors
doctest = false

[dependencies]
alloy = "1"
bitflags = "2"
bytes = "1.11.0"
serde = "1.0.228"
slotmap = "1.1.1"
thiserror = "2.0.17"
tracing = "0.1.43"

[dev-dependencies]
alloy = {version = "1", features = ["node-bindings"]}
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
